# ffmpeg_study

./: .gitignore  CMakeLists.txt  main.cpp
ffmpeg/doc/: ffmpeg-filters.html  ffplay-all.html
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: avdevice.lib  avfilter.lib  avformat.lib  swresample.lib  swscale.lib
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavfilter.pc
glfw/lib/: glfw3.lib
haha/: CMakeLists.txt  goo.cpp  goo.h
hehe/: CMakeLists.txt  foo.cpp  foo.h
player/: newPlay.cpp  newPlay.h  openglPlayer.cpp  openglPlayer.h  player.c  player.h
thirdLib/ffmpeg/doc/: ffmpeg-all.html  ffprobe-all.html
thirdLib/ffmpeg/lib/: avcodec.lib  avutil.lib  postproc.lib
thirdLib/ffmpeg/lib/pkgconfig/: libavdevice.pc  libavformat.pc
util/: audio_control.cpp  audio_control.h  audio_extra.cpp  codec.cpp  codec.h  cut.cpp  extra_audio.cpp  extra_video.cpp  io_test.cpp  io_test.h  remux.cpp
window/: MediaControl.cpp  MediaControl.h  PlayWindow.cpp  PlayWindow.h  mediaWindow.cpp  mediaWindow.h  windowControl.cpp  windowControl.h
